[gd_scene load_steps=17 format=2]

[ext_resource path="res://Assets/Components/TextBg.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Win.gd" type="Script" id=2]
[ext_resource path="res://Assets/Font/KGRedHands.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Font/soupofjustice.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Assets/Components/Play.png" type="Texture" id=5]
[ext_resource path="res://Assets/Components/Menu.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=3]
size = 95
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 55
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=9]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=10]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 80
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=4]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("WinBackground:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 98, -514 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.470588 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "hide"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("WinBackground:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 98, 108 ), Vector2( 98, 767 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.470588 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "in"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("WinBackground:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 9.004, -730 ), Vector2( 9.004, 7.145 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.470588 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "out"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("WinBackground:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 9.004, 7.145 ), Vector2( 9.004, 744 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.470588 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "show"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("WinBackground:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 98, -514 ), Vector2( 98, 108 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ColorRect:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0.470588 ) ]
}

[node name="Win" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )

[node name="WinBackground" type="Sprite" parent="."]
position = Vector2( 98, -514 )
scale = Vector2( 0.992, 0.381 )
texture = ExtResource( 1 )
centered = false

[node name="WinText" type="Label" parent="WinBackground"]
margin_left = 422.375
margin_top = 175.0
margin_right = 803.375
margin_bottom = 271.0
rect_scale = Vector2( 1, 3 )
custom_fonts/font = SubResource( 3 )
text = "Ganhou!"
align = 1
valign = 1

[node name="Score" type="Label" parent="WinBackground"]
margin_left = 442.0
margin_top = 482.0
margin_right = 781.0
margin_bottom = 548.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 1, 2.6 )
custom_fonts/font = SubResource( 8 )
text = "Pontos: 100"
align = 1
valign = 1

[node name="CuriosityTitle" type="Label" parent="WinBackground"]
visible = false
margin_left = 478.827
margin_top = 656.0
margin_right = 751.827
margin_bottom = 714.0
rect_scale = Vector2( 1, 2.6 )
custom_fonts/font = SubResource( 9 )
text = "Você sabia?"
align = 1
valign = 1

[node name="Timertitle" type="Timer" parent="WinBackground/CuriosityTitle"]
one_shot = true
autostart = true

[node name="CuriosityText" type="RichTextLabel" parent="WinBackground"]
visible = false
margin_left = 55.0
margin_top = 874.0
margin_right = 1219.0
margin_bottom = 1130.0
rect_scale = Vector2( 1, 2.6 )
custom_fonts/normal_font = SubResource( 10 )
bbcode_enabled = true
bbcode_text = "[center]Os vegetais de coloração verde trazem muitos benefícios à saúde do nosso corpo. São ricos em vitamina A, vitamina B2, vitamina B5, vitamina C, vitamina K e minerais como cálcio, ferro. Contribuem com a saúde da pele, dos ossos, do cabelo e da visão."
text = "Os vegetais de coloração verde trazem muitos benefícios à saúde do nosso corpo. São ricos em vitamina A, vitamina B2, vitamina B5, vitamina C, vitamina K e minerais como cálcio, ferro. Contribuem com a saúde da pele, dos ossos, do cabelo e da visão."

[node name="TimerText" type="Timer" parent="WinBackground/CuriosityText"]
one_shot = true

[node name="MenuButton" type="TouchScreenButton" parent="WinBackground"]
position = Vector2( 75.157, 109.856 )
scale = Vector2( 1, 2.6 )
normal = ExtResource( 6 )

[node name="ContinueButton" type="TouchScreenButton" parent="WinBackground"]
visible = false
position = Vector2( 417.335, 1550.8 )
scale = Vector2( 1, 2.6 )
normal = ExtResource( 5 )

[node name="ButtonText" type="Label" parent="WinBackground/ContinueButton"]
margin_left = 42.9953
margin_top = 22.1309
margin_right = 451.995
margin_bottom = 109.131
rect_scale = Vector2( 0.7, 0.7 )
custom_fonts/font = SubResource( 2 )
text = "Continuar"
align = 1
valign = 1

[node name="TimerButton" type="Timer" parent="WinBackground/ContinueButton"]
one_shot = true

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
margin_right = 1280.0
margin_bottom = 720.0
size_flags_horizontal = 4
size_flags_vertical = 4
color = Color( 1, 1, 1, 0.470588 )

[node name="WinAnimation" type="AnimationPlayer" parent="."]
autoplay = "show"
anims/RESET = SubResource( 4 )
anims/hide = SubResource( 5 )
anims/in = SubResource( 7 )
anims/out = SubResource( 11 )
anims/show = SubResource( 6 )

[connection signal="timeout" from="WinBackground/CuriosityTitle/Timertitle" to="." method="_on_Timertitle_timeout"]
[connection signal="timeout" from="WinBackground/CuriosityText/TimerText" to="." method="_on_TimerText_timeout"]
[connection signal="pressed" from="WinBackground/MenuButton" to="." method="_on_MenuButton_pressed"]
[connection signal="pressed" from="WinBackground/ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="timeout" from="WinBackground/ContinueButton/TimerButton" to="." method="_on_TimerButton_timeout"]
